<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Calix Gigaspire App</string>


    <!--Login Screen-->
    <string name="login">Login</string>
    <string name="email_id">Email Id</string>
    <string name="pwd">Password</string>
    <string name="forgot_pwd_ques">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="submit">Submit</string>

    <string name="forgot_pwd">Forgot Password</string>
    <string name="enter_email_id">Please Enter Email Id</string>
    <string name="enter_valid_email_id">Please Enter Valid Email Id</string>
    <string name="enter_pwd">Please Enter Password</string>
    <string name="enter_your_email_id">Enter your email id to reset the password.</string>

    <!--Forgot pwd-->
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>

    <!--Registration Screen-->
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="mob_num">Mobile Number</string>
    <string name="router_default_name">%1$s\'s Router</string>

    <string name="enter_first_name">Please Enter First Name</string>
    <string name="enter_last_name">Please Enter Last Name</string>
    <string name="pass_contains_eight_char">Password must have at least Eight Characters</string>
    <string name="pwd_does_not_match">Password and Confirm Password Does Not Match</string>

    <!--Router Configuration Screen-->
    <string name="router_config">Router-Configuration</string>
    <string name="config_qr_code">Config with QR Code</string>
    <string name="or">Or</string>
    <string name="enter_detail_below">Enter the router details below</string>
    <string name="mac_address">MAC Address</string>
    <string name="serial_number">Serial Number</string>
    <string name="invalid_code">Invalid QR Code or Bar Code</string>
    <string name="colon_sym">:</string>

    <string name="enter_mac_address">Please Enter MAC Address</string>
    <string name="enter_serial_number">Please Enter Serial Number</string>

    <!--Bar code Scanner-->
    <string name="no_barcode_detected">No Barcode Detected</string>
    <string name="scanner_started">Scanner started</string>

    <!--Router Detected Screen-->
    <string name="network_detected">Network Successfully Detected</string>
    <string name="router_name">Router Map</string>
    <string name="network_name_ssid">Network Name (SSID)</string>

    <string name="enter_router_name">Please Enter Router Name</string>
    <string name="enter_network_name">Please Enter Network Name</string>
    <string name="none">None</string>

    <!--Dialog box-->
    <string name="no_internet"> Please Verify Your Internet Connection.</string>
    <string name="retry">Retry</string>
    <string name="connect_time_out">Could not connect to Gigaspire App Server. Please try again.</string>
    <string name="go_settings_per">Go to Settings and Enable the Permissions</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_msg">Are you sure want to Exit?</string>
    <string name="logout_msg">Are you sure want to Logout?</string>

    <string name="dashboard">Dashboard</string>
    <string name="devices">Devices</string>
    <string name="router">Router</string>
    <string name="device_list">Device List</string>
    <string name="network_usage">Network Usage</string>
    <string name="speed_test">Speed Test</string>
    <string name="parental_control">Parental Control</string>
    <string name="guest_network">Guest Network</string>
    <string name="settings">Settings</string>
    <string name="alexa">Alexa</string>
    <string name="logout">Logout</string>
    <string name="my_media">My Media</string>
    <string name="username">User Name</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>

    <!--Footer-->
    <string name="footer_devices">Devices</string>
    <string name="footer_dashboard">Dashboard</string>
    <string name="footer_router_map">Router Map</string>
    <string name="footer_search">Search</string>
    <string name="footer_filter">Filter</string>

    <!--Dashboard Screen-->
    <string name="defaultSpeed">0.0</string>
    <string name="default_count">0</string>
    <string name="speed_unit"> Mbytes</string>


    <!--Devices Screen-->
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="linux">Linux</string>
    <string name="windows">Windows</string>
    <string name="apple">Apple OS</string>
    <string name="connected_to">Connected to</string>
    <string name="filter_connected_to">Connected to %1$s</string>
    <string name="disconnected_from">Disconnected from</string>
    <string name="disconnect_device">Disconnected from Wi-Fi Point %1$s</string>
    <string name="connect_device">Connected to Wi-Fi Point %1$s</string>

    <string name="connect_device_list">Disconnect from Wi-Fi Point %1$s</string>
    <string name="disconnect_device_list">Connect to Wi-Fi Point %1$s</string>

    <string name="percentage_sys">%</string>

    <string name="dashboard_header">%1$s - Dashboard</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="more">More</string>

    <string name="please_enter_device_name">Please Enter Device Name </string>

    <!--Date format Details-->
    <string name="min">min</string>
    <string name="mins">mins</string>
    <string name="hour">hour</string>
    <string name="current_hour">current hour</string>
    <string name="hours">hours</string>
    <string name="day">day</string>
    <string name="current_day">current day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="current_week">current week</string>
    <string name="weeks">weeks</string>
    <string name="month">month</string>
    <string name="current_month">current month</string>
    <string name="months">months</string>
    <string name="year">year</string>
    <string name="current_year">current year</string>
    <string name="years">years</string>
    <string name="just_now">just now</string>

    <string name="f_min">Minutes</string>
    <string name="f_hour">Hours</string>
    <string name="f_day">Day</string>
    <string name="f_week">Week</string>
    <string name="f_month">Month</string>

    <!--Wishes-->
    <string name="gud_morn">Good Morning</string>
    <string name="gud_afternoon">Good Afternoon</string>
    <string name="gud_evn">Good Evening</string>

    <!--Alert-->
    <string name="done">Done</string>

    <!--Device Details-->
    <string name="edit_devices">Edit the Device Name</string>
    <string name="change_the_device_name">Change the Device Name</string>
    <string name="enter_device_name">Enter Device Name </string>
    <string name="filter">Filters</string>
    <string name="downloaded_speed">Download Speed</string>
    <string name="uploaded_speed">Upload Speed</string>
    <string name="ip_address">IP Address</string>
    <string name="band">Band</string>
    <string name="channel">Channel</string>
    <string name="data_usage">Data Usage</string>

    <string name="type_android">Android</string>
    <string name="type_ios">Iphone</string>
    <string name="band_unit">%1$s Ghz</string>
    <string name="notify">Notifications</string>
    <string name="fix_it">Fix it</string>
    <string name="internet_cap">Internet</string>
    <string name="mode">Mode</string>
    <string name="speed">Speed</string>
    <string name="strong"><i>Strong&#160;</i></string>

    <!--Guest Network-->
    <string name="add_guest">Add a Guest Network</string>
    <string name="activated_time">Activated time %1$s</string>
    <string name="hyphen_sym">/</string>
    <string name="delete">Delete</string>
    <string name="event_name">Enter the Event Name</string>
    <string name="enter_event_name">Please Enter the Event Name</string>
    <string name="enter_guest_network_name">Please Enter Guest Network Name</string>
    <string name="failed_directory">Oops! Failed create Fautus directory</string>
    <string name="wpa">WPA</string>

    <!--Setup Guest Network-->
    <string name="setup_guest_wifi">Setup Guest Network</string>
    <string name="indefinite_network">Indefinite Network</string>
    <string name="no_time_limit">No Time Limit</string>
    <string name="time_duration_cap">TIME DURATION</string>
    <string name="date">Set-Date</string>
    <string name="time">Set Time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="guest_network_name">Guest Network Name (SSID)</string>
    <string name="password">Password</string>
    <string name="one_date" tools:ignore="TypographyDashes">01-12-2018</string>
    <string name="to">To</string>
    <string name="wifi_point">Wifi Point1</string>
    <string name="select_feature_date_time">Select Feature Date and Time</string>
    <string name="select_valid_date_time">Select valid Date and Time</string>
    <string name="select_one_contact">Select at Least One Contact</string>


    <!--SetupWifi Contact-->
    <string name="search">Search</string>
    <string name="all_contacts">All Contacts</string>
    <string name="contact_selected">%1$s Contact Selected</string>
    <string name="contacts_selected">%1$s Contacts Selected</string>
    <string name="no_contacts">No Contacts</string>

    <string name="auth_type">Authentication Type</string>
    <string name="nine_thirty">9:30 PM</string>
    <string name="seven_thiry">7:30 AM</string>
    <string name="start_time">Start Time : </string>
    <string name="end_time">End Time : </string>
    <string name="start_date">Start Date : </string>
    <string name="end_date">End Date : </string>
    <string name="alert">Alert</string>
    <string name="internet_unit"><i>Mbps</i></string>
    <string name="empty_devices_alert">No devices connected to this network</string>
    <string name="arrow">arrow</string>
    <string name="noType" />

    <!--Device List-->
    <string name="phone">Phone</string>
    <string name="computer">Computer</string>
    <string name="console">Console</string>
    <string name="storage">Storage</string>
    <string name="printer">Printer</string>
    <string name="television">Television</string>
    <string name="iot_device">IOT Device</string>
    <string name="camera">Camera</string>
    <string name="unknown">Unknown</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="guest_home">Guest Home</string>
    <string name="guest_Settings">Guest Settings</string>
    <string name="rename">Rename</string>
    <string name="router_edit_pheader">Rename</string>
    <string name="router_edit_sheader">Edit your Router name</string>
    <string name="router_edit_hint">Router Name</string>
    <string name="device_edit_pheader">Edit Device Name</string>
    <string name="device_edit_sheader">Enter your Device Name here</string>
    <string name="device_edit_hint">Device Name</string>
    <string name="guest_edit_pheader">Rename</string>
    <string name="guest_edit_sheader">Enter the Event Name</string>
    <string name="guest_edit_hint">Event Name</string>
    <string name="select_future_date">Select Future Date</string>
    <string name="select_future_time">Select Future Time</string>
    <string name="all">Whole Network</string>

</resources>
