<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutWidMatch_HeiWrap"
    android:layout_margin="@dimen/size15"
    android:elevation="@dimen/size2"
    app:cardCornerRadius="@dimen/size3"
    tools:targetApi="lollipop">

    <LinearLayout
        style="@style/LayoutWidMatch_HeiWrap"
        android:orientation="vertical"
        android:padding="@dimen/size15">

        <TextView
            style="@style/TextRobotoMedium"
            android:text="@string/forgot_pwd"
            android:textSize="@dimen/text12" />

        <TextView
            style="@style/TextRobotoRegular"
            android:padding="@dimen/size5"
            android:text="@string/enter_your_email_id"
            android:textColor="@color/gray"
            android:textSize="@dimen/text11" />


        <EditText
            android:id="@+id/email_id_edt"
            style="@style/EditTextRobotoRegular"
            android:layout_marginBottom="@dimen/size10"
            android:layout_marginTop="@dimen/size10"
            android:hint="@string/email_id"
            android:imeActionId="100"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:maxLines="1" />


        <LinearLayout
            style="@style/LayoutWidMatch_HeiWrap"
            android:layout_height="@dimen/size35"
            android:layout_margin="@dimen/size10">

            <Button
                android:id="@+id/cancel_btn"
                style="@style/ButtonRobotoMedium"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/size10"
                android:layout_weight="1"
                android:background="@drawable/gray_btn"
                android:elevation="0dip"
                android:text="@string/cancel"
                android:textColor="@color/gray"
                android:textSize="@dimen/text12"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/submit_btn"
                style="@style/ButtonRobotoMedium"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/size10"
                android:layout_weight="1"
                android:elevation="0dip"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/text12"
                tools:targetApi="lollipop" />

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>

