<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/router_config_parent_lay"
    style="@style/LayoutMatch"
    android:background="@color/white">

    <ScrollView
        style="@style/LayoutMatch"
        android:layout_above="@+id/submit_btn">

        <LinearLayout
            style="@style/LayoutWidMatch_HeiWrap"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/router_config_header_bg_lay"
                style="@style/LayoutWidMatch_HeiWrap"
                android:layout_height="@dimen/size190"
                android:background="@drawable/header_bg">

                <RelativeLayout
                    android:id="@+id/router_config_header_lay"
                    style="@style/LayoutWidMatch_HeiWrap"
                    android:visibility="visible">

                    <include layout="@layout/ui_general_header" />
                </RelativeLayout>


                <ImageView
                    android:id="@+id/router_config_header_img"
                    style="@style/LayoutMatch"
                    android:layout_below="@+id/router_config_header_lay"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/size20"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/size10"
                    android:src="@drawable/router" />

            </RelativeLayout>

            <LinearLayout
                style="@style/LayoutWidMatch_HeiWrap"
                android:layout_marginEnd="@dimen/size15"
                android:layout_marginStart="@dimen/size15"
                android:orientation="vertical">

                <TextView
                    style="@style/TextRobotoRegular"
                    android:layout_marginTop="@dimen/size20"
                    android:gravity="start"
                    android:text="@string/config_qr_code"
                    android:textSize="@dimen/text11" />

                <ImageView
                    android:id="@+id/qr_code_scanner_img"
                    android:layout_width="@dimen/size70"
                    android:layout_height="@dimen/size70"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/size13"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/submit"
                    android:src="@drawable/qr_code_scanner_img" />

                <LinearLayout
                    style="@style/LayoutWidMatch_HeiWrap"
                    android:padding="@dimen/size10">

                    <View
                        style="@style/LayoutWidWei_HeiWrap"
                        android:layout_height="@dimen/size0.5"
                        android:layout_gravity="center"
                        android:background="@color/blue" />

                    <TextView
                        style="@style/TextRobotoRegular"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:textColor="@color/blue"
                        android:text="@string/or" />

                    <View
                        style="@style/LayoutWidWei_HeiWrap"
                        android:layout_height="@dimen/size0.5"
                        android:layout_gravity="center"
                        android:background="@color/blue" />
                </LinearLayout>

                <TextView
                    style="@style/TextRobotoRegular"
                    android:gravity="start"
                    android:text="@string/enter_detail_below"
                    android:textSize="@dimen/text11" />

                <RelativeLayout
                    style="@style/LayoutWidMatch_HeiWrap"
                    android:layout_marginTop="@dimen/size20"
                    android:background="@drawable/blue_border_bg">

                    <EditText
                        android:id="@+id/mac_address_edt"
                        style="@style/EditTextRobotoRegular"
                        android:layout_toStartOf="@+id/mac_address_img"
                        android:background="@null"
                        android:hint="@string/mac_address"
                        android:imeOptions="actionNext|flagNoExtractUi"
                        android:inputType="text"
                        android:maxLength="17"
                        android:maxLines="1" />

                    <ImageView
                        android:id="@+id/mac_address_img"
                        android:layout_width="@dimen/size35"
                        android:layout_height="@dimen/size35"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="@dimen/size10"
                        android:layout_alignParentEnd="true"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/bar_img" />
                </RelativeLayout>

                <RelativeLayout
                    style="@style/LayoutWidMatch_HeiWrap"
                    android:layout_marginTop="@dimen/size10"
                    android:background="@drawable/blue_border_bg">

                    <EditText
                        android:id="@+id/serial_number_edt"
                        style="@style/EditTextRobotoRegular"
                        android:layout_toStartOf="@+id/serial_number_img"
                        android:hint="@string/serial_number"
                        android:imeActionId="100"
                        android:imeOptions="actionDone|flagNoExtractUi"
                        android:inputType="text"
                        android:maxLines="1"
                        android:background="@null"
                        tools:ignore="TextFields" />

                    <ImageView
                        android:id="@+id/serial_number_img"
                        android:layout_width="@dimen/size35"
                        android:layout_height="@dimen/size35"
                        android:layout_marginEnd="@dimen/size10"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/bar_img" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submit_btn"
        style="@style/ButtonRobotoMedium"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/size5"
        android:layout_marginEnd="@dimen/size15"
        android:layout_marginStart="@dimen/size15"
        android:layout_marginTop="@dimen/size5"
        android:text="@string/submit"
        android:textColor="@color/white"
        tools:targetApi="lollipop" />
</RelativeLayout>
